unpackaged/main/default/objects/ETT_Purchase_Order_Line_Item__c/ETT_Purchase_Order_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Line Item</label>
    <nameField>
        <displayFormat>POL-{00000}</displayFormat>
        <label>POL Ref No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>