unpackaged/main/default/objects/ETT_Purchase_Order_Line_Item__c/fields/ETT_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Delivery_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PO Completion Date</label>
    <type>Date</type>
</CustomField>