unpackaged/main/default/objects/ETT_Purchase_Order_Line_Item__c/fields/ETT_Description__c.field-meta.xml
<CustomField>
    <fullName>ETT_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>