unpackaged/main/default/objects/ETT_Purchase_Order_Line_Item__c/fields/ETT_Item__c.field-meta.xml
<CustomField>
    <fullName>ETT_Item__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>