unpackaged/main/default/objects/ETT_Purchase_Order_Line_Item__c/fields/ETT_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>ETT_Line_Amount__c</fullName>
    <formula>ETT_Unit_Price__c *  ETT_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>