unpackaged/main/default/objects/ETT_Purchase_Order_Line_Item__c/fields/ETT_UOM__c.field-meta.xml
<CustomField>
    <fullName>ETT_UOM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Numbers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>