unpackaged/main/default/objects/ETT_Purchase_Order_Line_Item__c/fields/ETT_Vat_Amount__c.field-meta.xml
<CustomField>
    <fullName>ETT_Vat_Amount__c</fullName>
    <formula>ETT_Line_Amount__c * 5/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vat Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>