unpackaged/main/default/objects/ETT_Purchase_Order_Line_Item__c/fields/ETT_Vat_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ETT_Vat_Percentage__c</fullName>
    <label>Vat Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5%</fullName>
                <default>true</default>
                <label>5%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>