unpackaged/main/default/objects/ETT_Purchase_Order_Line_Item__c/recordTypes/ETT_Tyre_Cash_Supplier_Accept_PO_Line.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Cash_Supplier_Accept_PO_Line</fullName>
    <active>true</active>
    <label>Tyre - Cash Supplier Accept PO Line</label>
</RecordType>