unpackaged/main/default/objects/ETT_Purchase_Order_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETT_Accepted_by_FM__c</columns>
    <columns>ETT_Accepted_by_HOO__c</columns>
    <columns>ETT_Line_Amount__c</columns>
    <columns>ETT_Purchase_Order__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>ETT_Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>